deploy/k8s-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tomster
  namespace: tomster
  labels:
    app: tomster
spec:
  type: ClusterIP
  selector:
    app: tomster
  ports:
  - name: http
    port: 5000
    targetPort: 5000
